[tool.poetry]
name = "run"
version = "0.0.0"
description = "generate runcards"
authors = ["Alessandro Candido <candido.ale@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
click = "^8.0.1"
PyInquirer = "^1.0.3"
rich = "^10.6.0"
PyYAML = "^5.4.1"
yadism = "^0.7.0"
pandas = "^1.3.0"
lz4 = "^3.1.3"
breezy = "^3.2.1"
six = "^1.16.0"
pkgconfig = "^1.5.5"
pygit2 = "^1.6.1"
requests = "^2.26.0"
a3b2bbc3ced97675ac3a71df45f55ba = "^6.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pdbpp = "^0.10.3"
black = "^21.9b0"
isort = "^5.9.3"

[tool.poetry.scripts]
rr = "run:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
