[tool.poetry]
name = "runcardsrunner"
version = "0.0.0"
description = "Generate runcards for producing PineAPPL grids."
authors = ["Alessandro Candido <candido.ale@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
click = "^8.0.1"
rich = "^10.6.0"
PyYAML = "^5.4.1"
yadism = "^0.10.8"
pandas = "^1.3.0"
lz4 = "^3.1.3"
breezy = "^3.2.1"
pkgconfig = "^1.5.5"
pygit2 = "^1.6.1"
requests = "^2.26.0"
a3b2bbc3ced97675ac3a71df45f55ba = "^6.4.0"
lhapdf-management = "^0.2"
pineappl = "0.5.0"
# docs dependencies (for readthedocs)
Sphinx = { version = "^4.2.0", optional = true }
sphinx-rtd-theme = { version = "^1.0.0", optional = true }
sphinxcontrib-bibtex = { version = "^2.4.1", optional = true }
more-itertools = "^8.10.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
pdbpp = "^0.10.3"
black = "^21.9b0"
isort = "^5.9.3"
ipython = "^7.28.0"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-bibtex = "^2.4.1"
pylint = "^2.11.1"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme", "sphinxcontrib-bibtex"]

[tool.poetry.scripts]
rr = "runcardsrunner:command"

[tool.poe.tasks]
lint = "pylint runcardsrunner"
ipy = "ipython"
test-mg5 = "rr run TEST_RUN_SH theories/theory_213.yaml"
test-yad = "rr run HERA_CC_318GEV_EM_SIGMARED theories/theory_213.yaml"
docs = { "shell" = "cd docs; make html" }
docs-view = { "shell" = "cd docs; make view" }
docs-clean = { "shell" = "cd docs; make clean" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
